# DeezerTUI

./: .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum
.clusterfuzzlite/: build.sh
.github/: dependabot.yml
.github/workflows/: android.yml  ci.yml  release.yml
assets/: OpenDeezer.icns
cmd/deezertui/: main.go
cmd/opendeezer/: main.go
cmd/opendeezer-mcp/: main.go
corelib/: connect.go  deezercore.go  services.go  webremote.go
docs/: FUZZING.md
examples/download/: main.go
gui/gnome/: .gitignore  README.md  build.sh  meson.build
gui/gnome/data/: org.opendeezer.OpenDeezer.desktop
gui/gnome/src/: main.c  standalone.c
gui/ios/: .gitignore  build.sh  project.yml
gui/kde/: .gitignore  CMakeLists.txt  README.md  build.sh
gui/linux/: README.md  build.sh  launcher.c  org.opendeezer.OpenDeezer.desktop
gui/macos/: .gitignore  Info.plist  Makefile  Package.swift  README.md
gui/windows/: DeezerCore.cs  MainWindow.xaml.cs  Models.cs  OpenDeezer.csproj  OpenDeezer.vcxproj  README.md  app.manifest  libdeezercore.def  opendeezer.rc
internal/audio/: decryptreader.go  decryptreader_test.go  flac.go  gain_test.go  output_malgo.go  output_oto.go  player.go  prefetch.go  sleeptimer_test.go
internal/config/: config.go
internal/control/: client.go  control.go
internal/deezer/: browse.go  client.go  decrypt.go  decrypt_test.go  models.go  podcast.go
internal/discord/: conn_unix.go  conn_windows.go  discord.go  discord_test.go
internal/ui/: view.go  (+9 more)
mobile/: odmobile.go
packaging/: README.md
sdk/: README.md
(+88 files in other folders)
